--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-/build/
+# NetBeans #
+**/nbproject/private/
+**/nbproject/Makefile-*.mk
+**/nbproject/Package-*.bash
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+build.xml
+manifest.mf
+
+# Class Files #
+*.class
